--- a/DancingRose.html
+++ b/DancingRose.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1>DANCING ROSE</h1>
+  <h1>DANCING ROBOT</h1>
   <div class="robots">
     <div class="android">
       <div class="head">
